tests-build/tests/fail/macros_main_generics.stderr
error: defaults for const parameters are only allowed in `struct`, `enum`, `type`, or `trait` definitions
 --> tests/fail/macros_main_generics.rs:9:44
  |
9 | async fn where_clause_const_generics<const T: usize = { 1 + 1 }>() {}
  |                                            ^
